TEST_PROGRAMS/VALID/01/#27.1.go
package main

func main() {
  switch q := 3; q{
    case q+q-q:
      var x = 2
  }

  var q = 3
  switch q{
    case q+q-q:
      var x = 2
  }

  switch {
    case q+q-q:
      var x = 2
  }
}
